# edb1ordenacao

./: .gitignore  CMakeLists.txt  README.md  TODO  a.out  tamanhos.txt
src/: main.cpp  sortfacilities.cpp  sortfacilities.h  sorts.h  timefacilities.cpp  timefacilities.h  uint.h  vecfacilities.cpp  vecfacilities.h
